<resources>

    //HOME
    <string name="app_name">CRPG_Remake</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_reminders">Lembretes</string>
    <string name="title_meditacao">Meditacao</string>
    <string name="title_media">REPRODUZIR ÁUDIO</string>
    <string name="title_agenda">AGENDA</string>
    <string name="title_refeicao">ESCOLHER REFEICAO</string>
    <string name="home_fragment_appbar_title">Plataforma CRPG</string>

    <string name="button_sign_in">Sign In</string>
    <string name="label_or">or</string>
    <string name="message_trouble_internet_connection">There is a trouble connecting to server.
        Please, check your internet connection and try again.</string>

    //MEALS
    <string name="meal_action_bar_title">Seleção de refeição</string>

    <string name="imagem_ilutrativa_de_prato_de_carne">Imagem ilutrativa de prato de carne</string>
    <string name="imagem_ilustrativa_de_prato_de_peixe">Imagem ilustrativa de prato de peixe</string>
    <string name="imagem_ilustrativa_de_prato_de_dieta">Imagem ilustrativa de prato de dieta</string>
    <string name="imagem_ilustrativa_de_prato_vegetariano">Imagem ilustrativa de prato vegetariano</string>

    <string name="opcao_carne">Opção Carne</string>
    <string name="opcao_peixe">Opção Peixe</string>
    <string name="opcao_dieta">Opção Dieta</string>
    <string name="opcao_veg">Opção Vegetariana</string>

    <string name="guardar">Guardar</string>
    <string name="nenhuma_refeicao_selecionada">Nenhuma refeição selecionada</string>

    //Acronyms
    <string name="TTS">TTS</string>

    //Shared preferences
    <string name="mealsHasRun">mealsHasRun</string>
    <string name="remindersHasRun">remindersHasRun</string>
    <string name="meditationHasRun">meditationHasRun</string>
    <string name="mediaHasRun">mediaHasRun</string>
    <string name="datePickerHasRun">datePickerHasRun</string>
    <string name="agendaHasRun">agendaHasRun</string>

    //Permissions
    <string name="permitir">Permitir</string>
    <string name="recusar">Recusar</string>
    <string name="permitir_sugestoes_audio">Permitir Sugestões de Áudio</string>
    <string name="lancar_notificacoes_teste">Lançar notificações para teste</string>
    <string name="permitir_comandos_voz">Permitir Comandos de Voz</string>
    <string name="escolha_a_sua_refeicao">Selecione uma opção de refeição:</string>
    <string name="ok">OK</string>
    <string name="refeicao_escolhida_com_sucesso">Refeição escolhida com sucesso!</string>
    <string name="green_check">check</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar_lembrete">Adicionar lembrete</string>
    <string name="clique_icone_lapis">Clique icone lapis</string>
    <string name="criar_lembrete">Criar lembrete</string>
    <string name="lembrar_de">Lembrar de</string>
    <string name="notas_minusculo">Notas minusculo</string>
    <string name="escolher_dias">Escolher dias</string>
    <string name="selecionar_dias">Selecionar dias</string>


    <string name="selecionar_dia">Selecionar dia</string>
    <string name="em_que_dia">Em que dia?</string>
    <string name="a_que_horas">A que horas?</string>
    <string name="ambos">AMBOS</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="q">Q</string>
    <string name="d">D</string>
    <string name="telemovel">telemovel</string>
    <string name="som_ou_vibracao">som_ou_vibracao</string>
    <string name="tomar_medicacao">Tomar medicacao</string>
    <string name="apanhar_transporte">Apanhar transporte</string>
    <string name="escolher_almoco">Escolher almoço</string>
    <string name="meu_lembrete">Meu lembrete</string>
    <string name="insira_o_nome_do_seu_lembrete">Insira o nome do seu lembrete</string>
    <string name="nenhum_dia_selecionado_warning">Nenhum dia selecionado</string>
    <string name="selecionar">Selecionar</string>
    <string name="selecionar_data_hint">Selecionar data</string>
    <string name="selecionar_data">Selecionar data</string>
    <string name="nenhum_dia_selecionado_msg">Nenhum dia selecionado</string>
    <string name="indique_refeicao">Por favor selecione indique a refeicao pretendida</string>
    <string name="como_gostaria_de_se_sentir">Selecionar estado de espirito atual:</string>
    <string name="relaxado">relaxado</string>
    <string name="feliz">feliz</string>
    <string name="com_sono">com sono</string>
    <string name="confiante">confiante</string>
    <string name="criado_c_sucesso">Lembrete criado com sucesso!</string>
    <string name="horas_invalidas">Horas ou minutos invalidos</string>
    <string name="campos_obrigatorios">Campos obrigatorios em falta!</string>


    //TIMELINE ITEM
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="marker">Marker</string>
    <string name="elevation">Size</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="marker_drawable_message">You can also change the marker drawable in attributes.</string>
    <string name="marker_in_center">In center</string>
    <string name="line">Line</string>
    <string name="start_line_color">Start Line Color</string>
    <string name="end_line_color">End Line Color</string>
    <string name="width">Width</string>
    <string name="type">Type</string>
    <string name="dash_length">Dash Length</string>
    <string name="dash_gap">Dash Gap</string>
    <string name="line_padding">Line Padding</string>
    <string name="top_padding">Top Padding</string>
    <string name="bottom_padding">Bottom Padding</string>
    <string name="left_padding">Left Padding</string>
    <string name="right_padding">Right Padding</string>
    <string name="marker_padding_message">When orientation is vertical then only top and bottom
        padding is applied, orientation is horizontal then only left and right padding is applied.</string>

    //MEDITACAO
    <string name="imagem_associada_estado_selecionado">Imagem associada ao estado selecionado</string>
    <string name="retroceder_reproducao">Retroceder na reprodução</string>
    <string name="reproduzir_faixa">Reproduzir faixa de meditação</string>
    <string name="pausar_reproducao">Pausar reprodução</string>
    <string name="avancar_reproducao">Avançar na reprodução</string>

    //REMINDER
    <string name="som">SOM</string>
    <string name="vibrar">VIBRAR</string>

    <string name="apply">Apply</string>
    <string name="orientation">Orientation</string>

    <string name="regressar">REGRESSAR</string>

    <string name="timeline_attributes">Timeline Attributes</string>
    <string name="style">Style</string>

    <string name="imagem_ilustrativa_do_item_da_agenda">Imagem ilustrativa do item da agenda</string>
    <string name="valor_em_falta">Valor em falta</string>
    <string name="apanhar_bus">Apanhar bus do CRPG</string>
    <string name="lembrar_escolha_almoco">Lembrar escolha de almoço</string>
    <string name="contextual_agenda">Selecione a janela que pretender para obter mais informaçoes</string>
    <string name="contextual_date_picker">Selecione um dia premindo item que pretender</string>
    <string name="contextual_reminder">Crie um novo lembrete</string>
    <string name="contextual_meditation">Indique qual o seu estado de espirito atual</string>
    <string name="contextual_media_player">Indique qual o seu estado de espirito atual</string>
    <string name="agenda">AGENDA</string>
    <string name="escolher_data">ESCOLHER DATA</string>
    <string name="doispontos">:</string>

    <string-array name="line_type">
        <item>Normal</item>
        <item>Dashed</item>
    </string-array>


</resources>