<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/second_layout"
  android:paddingVertical="@dimen/padding"
  android:paddingHorizontal="@dimen/padding4x">

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white_93"
    android:textSize="@dimen/button_text_size"

    android:text="@string/tomar_medicacao" />

  <View android:id="@+id/lembrar_separator1"
      style="@style/separator" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button1"
      style="@style/center_button_reminder"
      android:layout_height="55dp"
      android:text="@string/apanhar_transporte" />

  <View android:id="@+id/lembrar_separator2"
      style="@style/separator" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button2"
    android:text="@string/escolher_almoco"
    style="@style/center_button_reminder" />

  <View android:id="@+id/lembrar_separator3"
      style="@style/separator" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white_93"
    android:textSize="@dimen/button_text_size"
    android:text="@string/meu_lembrete" />

  <TextView
      android:id="@+id/inserir_titulo_lembrete_personalizado"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:text="@string/insira_o_nome_do_seu_lembrete"
      android:textSize="20sp"
      android:textColor="@color/SecondaryBlue"
      android:visibility="invisible"
      android:labelFor="@id/text_edit_personalizado"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/text_edit_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:inputType="text"
        android:visibility="invisible"
        android:autofillHints="" />
  </LinearLayout>
</LinearLayout>
