<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/second_layout"
    android:paddingHorizontal="@dimen/padding3x"
    android:paddingVertical="@dimen/padding4">

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button_hoje"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white_93"
    android:textSize="22sp" />

  <View android:id="@+id/dia_separator1"
      style="@style/greySeparator" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button_todos_dias"
    android:textSize="22sp"
    style="@style/center_button_reminder" />

  <View android:id="@+id/dia_separator2"
      style="@style/greySeparator" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button_personalizado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white_93"
    android:textSize="22sp"
    android:text="@string/escolher_dias" />
  
  <TextView
      android:id="@+id/button_selecionar_dias"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textAlignment="center"
      android:text="@string/selecionar_dias"
      android:textSize="20sp"
      android:textColor="@color/SecondaryBlue"
      android:visibility="invisible"
      tools:text="ola"
      tools:textColor = "@color/black"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_weight="7">

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonSeg"
          android:text="@string/s"
          style="@style/extendedMaterialButtonOutlinedStyle"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonTer"
          android:text="@string/t"
          style="@style/extendedMaterialButtonOutlinedStyle"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonQua"
          android:text="@string/q"
          style="@style/extendedMaterialButtonOutlinedStyle"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonQui"
          android:text="@string/q"
          style="@style/extendedMaterialButtonOutlinedStyle"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonSex"
          android:text="@string/s"
          style="@style/extendedMaterialButtonOutlinedStyle"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonSab"
          android:text="@string/s"
          style="@style/extendedMaterialButtonOutlinedStyle"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonDom"
          android:text="@string/d"
          style="@style/extendedMaterialButtonOutlinedStyle"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
  </LinearLayout>
</LinearLayout>
