<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/second_layout"
    android:paddingVertical="@dimen/padding"
    android:paddingHorizontal="@dimen/padding4x">

  <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/lembrar_radio_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:weightSum="4"
      app:singleSelection="true">

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_medicacao"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/button_text_size"
    android:text="@string/tomar_medicacao"
    android:layout_weight="1"/>

  <View android:id="@+id/lembrar_separator1"
      style="@style/separator" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/button_transporte"
      style="@style/center_button_reminder"
      android:layout_height="wrap_content"
      android:text="@string/apanhar_transporte"
      android:layout_weight="1"/>

  <View android:id="@+id/lembrar_separator2"
      style="@style/separator" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_almoco"
    android:text="@string/escolher_almoco"
    style="@style/center_button_reminder"
    android:layout_weight="1"/>

  <View android:id="@+id/lembrar_separator3"
      style="@style/separator" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button_lembrete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/button_text_size"
    android:text="@string/meu_lembrete"
    android:layout_weight="1"/>
  </com.google.android.material.button.MaterialButtonToggleGroup>

  <TextView
      android:id="@+id/inserir_titulo_lembrete_personalizado"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:text="@string/insira_o_nome_do_seu_lembrete"
      android:textSize="20sp"
      android:textColor="@color/SecondaryBlue"
      android:visibility="invisible"
      android:labelFor="@id/text_edit_personalizado"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/text_edit_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:inputType="text"
        android:visibility="invisible"
        android:autofillHints="" />
  </LinearLayout>
</LinearLayout>
