<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/second_layout"
  android:padding="@dimen/padding4">

  <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <RadioButton  android:id="@+id/imageButtonSom"
        style="@style/alertButton"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton android:id="@+id/imageButtonVibrar"
        style="@style/alertButton"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton android:id="@+id/imageButtonAmbos"
        style="@style/alertButton"
        android:onClick="onRadioButtonClicked"/>
  </RadioGroup>

  <TableLayout
    android:stretchColumns="1,3,"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/padding2x">

    <TableRow>
      <TextView
          android:id="@+id/textView_som"
          android:text="@string/som"
          style="@style/textAlert" />

      <ImageView android:id="@+id/checkbox_som"
          style="@style/imageAlert" />

      <TextView
          android:id="@+id/textView_vibrar"
          android:text="@string/vibrar"
          style="@style/textAlert"/>

      <ImageView android:id="@+id/checkbox_vibrar"
          style="@style/imageAlert" />

      <TextView android:id="@+id/textView_ambos"
          android:text="@string/ambos"
          style="@style/textAlert" />

      <ImageView android:id="@+id/checkbox_ambos"
          style="@style/imageAlert" />
    </TableRow>

  </TableLayout>

</LinearLayout>
