<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.tiagosantos.crpg_remake.ui.meals.MealsFragment" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white">

        <include
            layout="@layout/meal_choice_success"
            android:id="@+id/success"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/escolha_refeicao"
            android:text="@string/escolha_a_sua_refeicao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            style="@style/blue_text_title" />

        <FrameLayout
            android:id="@+id/frame_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/escolha_refeicao">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/frame_meals_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                style="@style/mealMainFrame"
                app:layout_constraintEnd_toStartOf="@+id/frame_opcao_peixe"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/frame_opcao_carne"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintStart_toStartOf="@+id/frame_meals_card"
                app:layout_constraintEnd_toEndOf="@+id/frame_meals_card"
                style="@style/mealCard">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/background_image_carne"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:contentDescription="@string/imagem_ilutrativa_de_prato_de_carne"
                        android:scaleType="centerCrop" />

                    <LinearLayout style="@style/meal_frame_linear_layout">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_titulo_carne"
                            android:text="@string/opcao_carne"
                            style="@style/meal_frame_text_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_opcao_carne"
                            style="@style/meal_text_option" />
                    </LinearLayout>
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/frame_opcao_peixe"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frame_opcao_carne"
                style="@style/mealCard">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/background_image_peixe"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:contentDescription="@string/imagem_ilustrativa_de_prato_de_peixe"
                        android:scaleType="centerCrop" />

                    <LinearLayout style="@style/meal_frame_linear_layout">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_titulo_peixe"
                            android:text="@string/opcao_peixe"
                            style="@style/meal_frame_text_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_opcao_peixe"
                            style="@style/meal_text_option" />
                    </LinearLayout>
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/frame_opcao_dieta"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                style="@style/mealCard"
                tools:ignore="RtlHardcoded">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/background_image_dieta"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:contentDescription="@string/imagem_ilustrativa_de_prato_de_dieta"
                        android:scaleType="centerCrop" />

                    <LinearLayout style="@style/meal_frame_linear_layout">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_titulo_dieta"
                            android:text="@string/opcao_dieta"
                            style="@style/meal_frame_text_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_opcao_dieta"
                            style="@style/meal_text_option" />
                    </LinearLayout>
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/frame_opcao_vegetariano"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                style="@style/mealCard">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/background_image_vegetariano"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:contentDescription="@string/imagem_ilustrativa_de_prato_vegetariano"
                        android:scaleType="centerCrop" />

                    <LinearLayout style="@style/meal_frame_linear_layout">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_titulo_vegetariano"
                            android:text="@string/opcao_veg"
                            style="@style/meal_frame_text_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_opcao_vegetariano"
                            style="@style/meal_text_option" />
                    </LinearLayout>
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_meals">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_confirm_meal"
                android:text="@string/guardar"
                style="@style/blue_button" />

        <TextView
            android:id="@+id/aviso_nenhuma_refeicao_checked"
            android:text="@string/nenhuma_refeicao_selecionada"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_meals"
            style="@style/warning_text" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>