<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>
                <variable
                    name="datepicker"
                    type="com.tiagosantos.crpg_remake.ui.agenda.DatePickerFragment"/>

                <import type="android.view.View" />
        </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context="com.tiagosantos.crpg_remake.ui.agenda.DatePickerFragment">

                <include
                    android:id="@+id/selected_item"
                    layout="@layout/selected_calendar_item"
                    android:visibility="gone" />

                <include
                    android:id="@+id/calendar_item"
                    layout="@layout/calendar_item"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/title_selecionar_data"
                    style="@style/blue_text_title"
                    android:layout_marginBottom="@dimen/padding2x"
                    android:text="@string/selecionar_data"
                    app:layout_constraintBottom_toTopOf="@id/main_single_row_calendar"
                    app:layout_constraintVertical_chainStyle="spread"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/date_picker_blue_text"
                    android:gravity="center_horizontal"
                    android:text="@+id/tvDate"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/title_selecionar_data"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvDay"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tiagosantos.common.ui.singlerowcalendar.calendar.SingleRowCalendar
                    android:id="@+id/main_single_row_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:deselection="false"
                    app:layout_constraintBottom_toTopOf="@+id/selecionar_dia_hint"
                    app:layout_constraintTop_toBottomOf="@+id/title_selecionar_data"
                    app:layout_constraintVertical_bias="0.5"
                    app:longPress="false"
                    app:multiSelection="false" />

                <TextView
                    android:id="@+id/selecionar_dia_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/selecionar_data_hint"
                    android:textColor="@color/md_blue_100"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_selecionar"
                    app:layout_constraintTop_toBottomOf="@+id/main_single_row_calendar" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_selecionar"
                    style="@style/blue_button"
                    android:contentDescription="@string/selecionar_dia"
                    android:text="@string/selecionar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selecionar_dia_hint" />

                <TextView
                    android:id="@+id/no_date_selected_warning"
                    style="@style/warning_text"
                    android:text="@string/nenhum_dia_selecionado_warning"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_selecionar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
